Updated JavaScript for smooth scrolling and dynamic navigation

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
             <img src="assets/logo.png" alt="Burger Website Logo" class="logo">
             <!-- Navigation Menu -->
             <div class="center-nav">
-                <a href="#home" class="nav-link">Home</a>
-                <a href="#menu" class="nav-link">Menu</a>
-                <a href="#order" class="nav-link">Order</a>
-                <a href="#about" class="nav-link">About</a>
+              <!-- Navigation links will be dynamically generated here -->
             </div>
             <!-- Social Media Icons -->
             <div class="social">
