Fix navigation and ensure Home section appears first in navigation and content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="stars"></div>
     <!-- Header Section -->
-    <header>
+    <header  id="home">
         <!-- Navbar -->
         <div class="navbar">
             <!-- Logo -->
